# RC-Central

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  RCCentral.spec  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  check-versions.yml  sign-catalog.yml  validate-catalog.yml
app/: __init__.py  backup.py  catalog.py  garage.py  gearing.py  installer.py  launcher.py  logsetup.py  main.py  parts.py  paths.py  sharecard.py  updater.py  versions.py
app/ui/: common.py  garage_tab.py  gear.py  log.py  manuals.py  pdf_viewer.py  settings.py  setup_diagram.py  share_card.py  theme.py  tools.py  tuning.py  window.py  workshop.py
catalog/: catalog.json  catalog.json.sig  schema.json
catalog/tools/: acuvance-update-tool.json  agfrc-servo-programmer.json  edgetx-companion.json  flysky-noble-tool.json  flysky-receiver-updater.json  futaba-gyd550.json  futaba-gyd560.json  gforce-usb-link.json  hobbywing-usb-link.json  kopropo-ex-next-backup.json  kopropo-ex-next-updater.json  kopropo-ex-xpansion-manager.json  kopropo-ics-servo-manager.json  kopropo-rsx4s-servos.json  kopropo-vfs-fr3-manager.json  lrp-firmware-update-tool.json  (+18 more)
docs/: ROADMAP.md  SIGNING.md
scripts/: check_versions.py  sign_catalog.py  sign_release.py  validate_catalog.py
spike/: NOTES.md  embed_spike.py
tests/: test_backup.py  test_check_versions.py  test_core.py  test_garage.py  test_gearing.py  test_logsetup.py  test_parts.py  test_paths.py  test_sharecard.py  test_updater.py  test_validate_catalog.py  test_versions.py
(+8 files in other folders)
