[project]
name = "rc-central"
version = "0.1.0"
description = "One app to install and launch all your RC drift setup tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.7",
    "requests>=2.32",
    "py7zr>=0.22",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "jsonschema>=4.23",
    "pyinstaller>=6.10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
