[project]
name = "rc-central"
version = "0.7.2"
description = "One app to install and launch all your RC drift setup tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.7",
    "requests>=2.32",
    "py7zr>=0.22",
    "pynacl>=1.6.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "jsonschema>=4.23",
    "pyinstaller>=6.10",
    "ruff>=0.15.22",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
